Fixed website responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-.canvas-container {
-    display: flex;
-    width: 40%;
-  }
-  
-#content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+input[type=range] {
+  width: 100%;
+}
+
+input[type=color] {
+  width: 100%;
+}
+
+html {
+  overflow-y: scroll; 
 }
